src/parse/snapshots/dilaria__parse__test__call__field_simple.snap
---
source: src/parse/test.rs
assertion_line: 517
expression: ast

---
Call(
    Call {
        callee: Ident(
            Ident {
                sym: "hugo",
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
        ),
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Field(
            Ident {
                sym: "name",
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
        ),
    },
)
