src/parse/snapshots/dilaria__parse__test__call__fn_args.snap
---
source: src/parse/test.rs
assertion_line: 541
expression: ast

---
Call(
    Call {
        callee: Ident(
            Ident {
                sym: "print",
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
        ),
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Fn(
            [
                Literal(
                    Number(
                        10.0,
                        Span {
                            start: 0,
                            end: 0,
                        },
                    ),
                ),
                Literal(
                    Number(
                        5.0,
                        Span {
                            start: 0,
                            end: 0,
                        },
                    ),
                ),
            ],
        ),
    },
)
