src/parse/snapshots/dilaria__parse__test__call__simple.snap
---
source: src/parse/test.rs
expression: ast
---
Call(
    Call {
        callee: Ident(
            Ident {
                sym: "print",
                span: Span(
                    0..0,
                ),
            },
        ),
        span: Span(
            0..0,
        ),
        kind: Fn(
            [],
        ),
    },
)
