src/parse/snapshots/dilaria__parse__test__call__with_exprs.snap
---
source: src/parse/test.rs
expression: ast
---
Call(
    Call {
        callee: Ident(
            Ident {
                sym: "print",
                span: Span(
                    0..0,
                ),
            },
        ),
        span: Span(
            0..0,
        ),
        kind: Fn(
            [
                Call(
                    Call {
                        callee: Call(
                            Call {
                                callee: BinaryOp(
                                    BinaryOp {
                                        span: Span(
                                            0..0,
                                        ),
                                        lhs: Literal(
                                            Number(
                                                10.0,
                                                Span(
                                                    0..0,
                                                ),
                                            ),
                                        ),
                                        rhs: Literal(
                                            Number(
                                                5.0,
                                                Span(
                                                    0..0,
                                                ),
                                            ),
                                        ),
                                        kind: Add,
                                    },
                                ),
                                span: Span(
                                    0..0,
                                ),
                                kind: Field(
                                    Ident {
                                        sym: "abs",
                                        span: Span(
                                            0..0,
                                        ),
                                    },
                                ),
                            },
                        ),
                        span: Span(
                            0..0,
                        ),
                        kind: Fn(
                            [],
                        ),
                    },
                ),
            ],
        ),
    },
)
